fix: ajustes dos programas para o Java 8