@@ -7,6 +7,9 @@ import java.nio.file.Paths;
 import java.nio.file.attribute.FileTime;
 import java.nio.file.attribute.UserPrincipal;
 
+/**
+ * Classe corrigida para o Java 8
+ */
 public class Arquivos {
 	
 	public static void main(String[] args) throws Exception {
@@ -14,15 +17,18 @@ public class Arquivos {
 		System.out.println(path.toAbsolutePath());
 		System.out.println("exists: " + Files.exists(path));		
 		
-		path = Path.of("c:\\windows\\system.ini");
+//		path = Path.of("c:\\windows\\system.ini");
+		path = Paths.get("c:\\windows\\system.ini");
 		System.out.println(path.toAbsolutePath());
 		System.out.println("exists: " + Files.exists(path));
 		
-		path = Path.of("c:/windows/system.ini");
+//		path = Path.of("c:/windows/system.ini");
+		path = Paths.get("c:/windows/system.ini");
 		System.out.println(path.toAbsolutePath());
 		System.out.println("exists: " + Files.exists(path));
 		
-		path = Path.of(new URI("file:///c:/windows/system.ini"));
+//		path = Path.of(new URI("file:///c:/windows/system.ini"));
+		path = Paths.get(new URI("file:///c:/windows/system.ini"));
 		System.out.println(path.toAbsolutePath());
 		System.out.println("exists: " + Files.exists(path));
 		
