@@ -4,6 +4,7 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.time.Duration;
 import java.time.Instant;
@@ -12,7 +13,7 @@ import java.util.UUID;
 
 public class BubbleSort {
 	
-	private static final Integer TAMANHO_VETOR = 1000;
+	private static final Integer TAMANHO_VETOR = 100000;
 	
 	public static void main(String[] args) throws IOException {
 		System.out.println(BubbleSort.class +  " - Ordenando aguarde..."); 
@@ -21,7 +22,7 @@ public class BubbleSort {
 		Random random = new Random();
 		
 		for (int i=0;i<=TAMANHO_VETOR-1;i++) 
-			valores[i] = random.nextInt(1, TAMANHO_VETOR);
+			valores[i] = random.ints(1, TAMANHO_VETOR).findAny().getAsInt();
 		
 		gerarArquivo(valores, "entrada");
 
@@ -52,11 +53,10 @@ public class BubbleSort {
 	
 	private static void gerarArquivo(Integer valores[], String suffix) throws IOException {
 		System.out.println(BubbleSort.class + " - Gravando em um arquivo" );
-		Path bubbleSortDiretorio = Files.createDirectory(Path.of("./bubbleSortDiretorio-" + suffix + "-" + UUID.randomUUID()));
+		Path bubbleSortDiretorio = Files.createDirectory(Paths.get("./bubbleSortDiretorio-" + suffix + "-" + UUID.randomUUID()));
 		Path bubbleSortArquivo = Files.createFile(bubbleSortDiretorio.resolve("bubbleSort-" + suffix + ".txt"));
 		for (Integer valor : valores)
-			Files.writeString(bubbleSortArquivo, valor + "\r\n", 
-					StandardCharsets.ISO_8859_1, StandardOpenOption.APPEND);
+			Files.write(bubbleSortArquivo, (valor + "\r\n").getBytes(StandardCharsets.ISO_8859_1), StandardOpenOption.APPEND);
 		System.out.println(BubbleSort.class + " - Arquivo gerado com sucesso" );
 	}
 
